# stellarcade

contracts/: Cargo.toml
contracts/access-control/src/: lib.rs
contracts/ai-generated-game/src/: lib.rs
contracts/balance-management/: Cargo.toml
contracts/balance-management/src/: lib.rs
contracts/contract-health-registry/src/: lib.rs
contracts/contract-interaction-library/src/: lib.rs
contracts/contract-upgrade-timelock/src/: lib.rs
contracts/cross-chain-bridge/src/: lib.rs
contracts/daily-reward-emission/src/: lib.rs
contracts/escrow-vault/src/: lib.rs
contracts/exploit-prevention/: Cargo.toml
contracts/exploit-prevention/src/: lib.rs
contracts/governance-token/src/: lib.rs
contracts/matchmaking-queue/src/: lib.rs
contracts/nft-reward/src/: lib.rs
contracts/pattern-puzzle/src/: lib.rs
contracts/penalty-slashing/src/: lib.rs
contracts/revenue-split/src/: lib.rs
contracts/reward-distribution/src/: lib.rs
contracts/reward-vesting/src/: lib.rs
contracts/session-nonce-manager/src/: lib.rs
contracts/settlement-queue/src/: lib.rs  test.rs
contracts/staking/src/: lib.rs
contracts/trivia-game/: Cargo.toml
contracts/trivia-game/src/: lib.rs
docs/contracts/: README.md  balance-management.md  pattern-puzzle.md  random-generator.md  settlement-queue.md  trivia-game.md
frontend/: index.html  package.json  pnpm-lock.yaml  vitest.config.ts
frontend/src/: App.tsx  index.css
frontend/src/pages/: GameLobby.tsx
frontend/src/services/: global-state-store.ts  query-cache-invalidation.ts  transaction-orchestrator.ts
frontend/src/types/: global-state.ts
frontend/tests/: setup.ts
frontend/tests/components/: GameLobby.test.tsx
frontend/tests/services/: optimistic-mutation.test.ts
(+1 files in other folders)
